--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
               <a href="/mqtt" class="nav-link">MQTT Configuration</a>
           </li>
           <li class="nav-item">
-              <a href="/reset" class="nav-link">Reset</a>
+              <a href="/reset_page" class="nav-link">Reset</a>
           </li>
       </ul>
   </nav>
