--- a/templates/style.css
+++ b/templates/style.css
@@ -116,9 +116,9 @@ tr:hover {
 }
 .button-row {
     display: flex;
-    justify-content: space-between; /* or 'space-around' or 'space-evenly' */
+    justify-content: space-evenly; /* or 'space-around' or 'space-evenly' */
     width: 100%;
-    gap: 1rem; /* space between buttons */
+    gap: 40px; /* space between buttons */
 }
 .button {
     background-color: var(--theme);
@@ -145,6 +145,9 @@ tr:hover {
 }
 .button.danger {
     background-color: #f44336;
+}
+.button.flex {
+    flex: 1;
 }
 
 /* List styles */
